Improve player input Fix options overflowing to board tiles

--- a/apps/moar-munz/src/app/play/play.component.scss
+++ b/apps/moar-munz/src/app/play/play.component.scss
@@ -163,14 +163,16 @@
 
             >.board-input {
                 text-align: center;
-                padding: 0 10px;
+                padding: 10px;
                 margin: 10px;
                 display: flex;
                 flex-direction: column;
-                border: 1px solid black;
-                border-radius: 10px;
                 flex-shrink: 10000;
                 overflow-y: auto;
+                max-height: 90%;
+                background-color: #673ab7;
+                color: white;
+                font-weight: 500;
 
                 >pre {
                     font: inherit;
@@ -180,6 +182,7 @@
                     margin: 2px 0;
                     border-radius: 3px;
                     outline: none;
+                    background-color: white;
                 }
             }
 
